# tbuddy

./: .gitignore  EULA.txt  README.md  __version__.py  app.icns  authorization.py  bot.py  config.json  dmg.sh  gui.py  license.txt  pyproject.toml  requirements.txt  twitch.py  utils.py
.github/workflows/: build.yml  cleanup.yml
src/: __version__.py  assistant_manager.py  authorization.py  bot.py  bot_operations.py  callback.html  config.py  device.py  gui.py  license.py  license_manager.py  load_assistant_type.py  server.py  twitch.py  update_checker.py  utils.py
src/assistants/: CheerCast.txt  Code-Cupid.txt  DrDisrespect.txt  IShowSpeed.txt  Mistress.txt  Ninja.txt  Pokimane.txt  PrecisionPlayer.txt  RPGMaster.txt  SpeedyHype.txt  TatDude.txt  TheHypeMaster.txt  TimTheTatman.txt  TwoTimeLegend.txt  info-Chan.txt  realhuman.txt  shroud.txt
tests/: test_gui.py
